--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="animate__animated animate__fadeInRight animate__delay-1s text-center">
                         <h1>Hiskia Perdamen Pulungan</h1>
                         <h5>full-stack developer</h5>
-                        <p><span class="me-4"><i class="fa-solid fa-at"></i> hiski46@gmail.com</span> <span><i class="fa-brands fa-whatsapp"></i> +62853-9622-4113</span> </p>
+                        <small><span class="me-4"><i class="fa-solid fa-at"></i> hiski46@gmail.com</span> <span><i class="fa-brands fa-whatsapp"></i> +62853-9622-4113</span> </small>
                     </div>
                 </div>
             </div>
