--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
     <!-- background -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-
+     <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- animasi -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
@@ -133,7 +134,10 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script>
-        
+        $(document).ready(function(){
+            $("canvas").attr('height', $(document).height());
+            $("canvas").attr('width', $(document).width());
+        })
         window.onload = function() {
             if (window.screen.availWidth>=960) {
             a=100
